--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ table {
   margin-top: 20px; 
 } 
 th, td { 
-  border: 1px solid #ccc; 
+  border: 1px solid #c7b8a5; 
   padding: 12px; 
   text-align: left; 
 } 
@@ -51,7 +51,7 @@ th {
 }
 
 .promo-box {
-  background-color: #fff8f0;
+  background-color: #c7b8a5;
   padding: 20px;
   border: 1px solid #ddd;
   border-radius: 8px;
@@ -79,7 +79,7 @@ th {
 section {
   margin: 20px 0;
   padding: 15px;
-  background: #fff8f0;
+  background: #c7b8a5;
   border: 1px solid #e0d5c5;
   border-radius: 8px;
 }
@@ -95,7 +95,7 @@ section input {
 }
 section button {
   background-color: #532a10;
-  color: #fff;
+  color: #c7b8a5;
   border: none;
   padding: 8px 12px;
   cursor: pointer;
@@ -106,11 +106,11 @@ section button:hover {
   background-color: #7a3c16;
 }
 #listTestimoni li {
-  background: #fff;
+  background: #c7b8a5;
   padding: 6px;
   border-radius: 5px;
   margin: 4px 0;
-  border: 1px solid #eee;
+  border: 1px solid #c7b8a5;
 }
 
 /* KEAKTIFAN 6 */
@@ -119,7 +119,7 @@ section button:hover {
 /* Footer lebih menarik */ 
 footer { 
   background-color: #532a10; 
-  color: white; 
+  color: wheat; 
   text-align: center; 
   padding: 20px; 
   margin-top: 40px; 
@@ -129,7 +129,7 @@ footer {
 form { 
   max-width: 600px; 
   margin: 0 auto; 
-  background-color: #f4f4f4; 
+  background-color: #c7b8a5; 
   padding: 20px; 
   border-radius: 8px; 
   box-shadow: 0 0 10px rgba(0,0,0,0.1); 
@@ -148,7 +148,7 @@ form textarea,
 form select { 
   width: 100%; 
   padding: 10px; 
-  border: 1px solid #bbb; 
+  border: 1px solid #c7b8a5; 
   border-radius: 5px; 
   margin-bottom: 15px; 
   font-size: 1rem; 
@@ -193,7 +193,7 @@ img {
 
 /* Card container untuk produk atau galeri */ 
 .card { 
-  background-color: #fff; 
+  background-color: #c7b8a5; 
   border-radius: 10px; 
   box-shadow: 0 4px 12px rgba(0,0,0,0.08); 
   padding: 16px; 
@@ -249,7 +249,7 @@ img {
     width: 100%;
     padding: 12px;
     background: #532a10;
-    color: white;
+    color: rgb(167, 137, 137);
     border: none;
     border-radius: 8px;
     cursor: pointer;
