--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ img {
 
 /* Card container untuk produk atau galeri */ 
 .card { 
-  background-color: #c7b8a5; 
+  background-color: #75401b; 
   border-radius: 10px; 
   box-shadow: 0 4px 12px rgba(0,0,0,0.08); 
   padding: 16px; 
@@ -288,3 +288,4 @@ img {
   from { opacity: 0; transform: translateY(5px); }
   to { opacity: 1; transform: translateY(0); }
 }
+
